Adding and emphasizing comments

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -10,9 +10,9 @@
     <string name="quantity" translatable="false">ثمن</string>
     <string name="order" translatable="false">طلب</string>
     <string name="totalPrice" translatable="false">ثمن: $<xliff:g id="price" exmaple="Amy">%d</xliff:g></string>
-    <string name="coffeeQuantity" translatable="false">كمية: <xliff:g id="quantity" exmaple="Amy">%d</xliff:g></string>
-    <string name="addWhippedCream" translatable="false">أضف كريمة مخفوقة: <xliff:g id="chocolate" exmaple="Amy">%s</xliff:g></string>
-    <string name="addChocolate" translatable="false">أضف شوكلا: <xliff:g id="chocolate" exmaple="Amy">%s</xliff:g></string>
+    <string name="coffeeQuantity" translatable="false">كمية: Quantity: <xliff:g id="quantity" exmaple="44">%d</xliff:g></string>
+    <string name="addWhippedCream" translatable="false">أضف كريمة مخفوقة: <xliff:g id="whippedCream" exmaple="Add Whipped Cream: No!">%s</xliff:g></string>
+    <string name="addChocolate" translatable="false">أضف شوكلا: <xliff:g id="whippedCream" exmaple="Add Whipped Cream: No!">%s</xliff:g></string>
     <string name="yes" translatable="false">نعم!</string>
     <string name="no" translatable="false">لا!</string>
 </resources>
