--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -4,13 +4,13 @@
     <string name="thank_you" translatable="true">شكرًا لك!</string>
     <string name="order_summary_name" translatable="true">إسم: <xliff:g id="name" exmaple="Amy">%s</xliff:g></string>
     <string name="topping" translatable="false">إضافات</string>
-    <string name="namehint" translatable="false">إسم</string>
+    <string name="nameHint" translatable="false">إسم</string>
     <string name="whippedCream" translatable="false">كريمة مخفوقة</string>
     <string name="chocolate" translatable="false">شوكولا</string>
     <string name="quantity" translatable="false">ثمن</string>
     <string name="order" translatable="false">طلب</string>
     <string name="totalPrice" translatable="false">ثمن: $<xliff:g id="price" exmaple="Amy">%d</xliff:g></string>
-    <string name="coffeeQuantity" translatable="false">كمية: Quantity: <xliff:g id="quantity" exmaple="44">%d</xliff:g></string>
+    <string name="coffeeQuantity" translatable="false">كمية: <xliff:g id="quantity" exmaple="44">%d</xliff:g></string>
     <string name="addWhippedCream" translatable="false">أضف كريمة مخفوقة: <xliff:g id="whippedCream" exmaple="Add Whipped Cream: No!">%s</xliff:g></string>
     <string name="addChocolate" translatable="false">أضف شوكلا: <xliff:g id="whippedCream" exmaple="Add Whipped Cream: No!">%s</xliff:g></string>
     <string name="yes" translatable="false">نعم!</string>
